# Pinlang

./: .gitignore  CMakeLists.txt  README.md
antlr4/: Pinlang.g4  Pinlang_lex.g4  generate.sh
code/predefine/: i16.pin  i32.pin  i64.pin  i8.pin  predefine.pin  u16.pin  u32.pin  u64.pin  u8.pin
code/test/: test.pin  test_array.pin  test_class.pin  test_fn.pin  test_if.pin  test_negative_number.pin  test_new.pin  test_operator.pin  test_pointer.pin  test_reference_dereference.pin  test_tostring.pin  (+1 more)
doc/: call_c_shared_lib  class  compile_constant  constraint  flow_control  function  generics  instruction  main_fn  method  note  problems  restriction  string  todo  tuple  type  variable  variable_table  vm
example_code/: a.pin  algorithm.pin  all.pin  array.pin  assignment.pin  class.pin  complex_fndef.pin  dynlib.pin  generics.pin  if.pin  int.pin  loop.pin  predefine.pin  printf.pin  string.pin  test_array.pin  test_class.pin  test_fn.pin  test_if.pin  test_loop.pin  test_pointer.pin  tuple.pin  type.pin
src/: .clang-format  .clangd  astnode.cpp  astnode.h  astnode_access_array_element.cpp  astnode_access_array_element.h  astnode_access_attr.cpp  astnode_access_attr.h  astnode_assignment.cpp  astnode_assignment.h  astnode_blockstmt.cpp  astnode_blockstmt.h  astnode_break.cpp  astnode_break.h  astnode_class_def.cpp  astnode_class_def.h  astnode_compile_const.cpp  astnode_compile_const.h  astnode_complex_fndef.cpp  astnode_complex_fndef.h  astnode_constraint.cpp  astnode_constraint.h  astnode_continue.cpp  astnode_continue.h  astnode_dereference.cpp  astnode_dereference.h  astnode_fncall.cpp  astnode_fncall.h  astnode_fndef.cpp  astnode_fndef.h  astnode_for.cpp  astnode_for.h  astnode_generic_fndef.cpp  astnode_generic_fndef.h  astnode_generic_instantiate.cpp  astnode_generic_instantiate.h  astnode_generic_restriction.cpp  astnode_generic_restriction.h  astnode_identifier.cpp  astnode_identifier.h  (+121 more)
tools/: test_all.sh
(+20 files in other folders)
